2007-10-10  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/debug.el (debugger-setup-buffer): Disable undo
	in *Backtrace*.

	* faces.el (face-font-selection-order): Doc fix.

	* loadhist.el (unload-feature): Doc fix.

2007-10-10  Juanma Barranquero  <lekktu@gmail.com>

	* follow.el: Change all instances of "Follow Mode" to "Follow
	mode" in docstrings and messages.

2007-10-09  Juanma Barranquero  <lekktu@gmail.com>

	* faces.el (face-font-selection-order): Doc fix.

	* follow.el (follow-mode-hook, follow-mode): Doc fixes.
	(follow-mode-off-hook): Mark as obsolete.

2007-10-08  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/edebug.el (edebug-install-custom-print-funcs)
	(edebug-install-custom-print, edebug-reset-print-funcs)
	(edebug-uninstall-custom-print, edebug-uninstall-custom-print-funcs):
	Functions deleted.
	(edebug-prin1, edebug-print, edebug-prin1-to-string)
	(edebug-format, edebug-message): Define directly as aliases.

2007-10-08  Juanma Barranquero  <lekktu@gmail.com>

	* follow.el (follow-mode): Don't run hooks twice.  Use `when'.

2007-10-07  Glenn Morris  <rgm@gnu.org>

	* simple.el (bad-packages-alist): Clarify Semantic and CEDET
	version numbers.

2007-10-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-completion-mode): Extend doc-string.
	(tramp-completion-mode-p): Revert change from 2007-09-24.
	Checking for `return' etc as last character is not sufficient, for
	example in dired-mode when entering <g> (revert-buffer) or
	<s> (dired-sort).

2007-10-06  Martin Rudalics  <rudalics@gmx.at>

	* window.el (mouse-autoselect-window-cancel): Don't cancel for
	select-window or select-frame events.
	(handle-select-window): When autoselecting window set input
	focus.  Restructure.

	* frame.el (focus-follows-mouse): Moved to frame.c.
	* cus-start.el (all): Add focus-follows-mouse.

2007-10-05  Chris Moore  <dooglus@gmail.com>

	* server.el (server-kill-new-buffers): Doc fix.

2007-10-05  Juanma Barranquero  <lekktu@gmail.com>
