@@ -7,6 +7,16 @@
 
 	* loadhist.el (unload-feature): Doc fix.
 
+2007-10-10  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el: Fix the usage of :foreground and :background face
+	attributes.  Reported by Nikolaj Schumacher <n_schumacher@web.de>.
+	(ps-print-version): New version 6.7.6.
+	(ps-face-attributes, ps-face-attribute-list, ps-face-background): Fix
+	code.
+	(ps-face-foreground-color-p, ps-face-background-color-p)
+	(ps-face-color-p): New inline funs.
+
 2007-10-10  Juanma Barranquero  <lekktu@gmail.com>
 
 	* follow.el: Change all instances of "Follow Mode" to "Follow
